# EcoLens

./: .gitignore  build.gradle.kts  gradle.properties  local.properties  wrangler.toml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/anim/: fade_in.xml  fade_in_2.xml  fade_out.xml  fade_out_2.xml  hold.xml  hold_scale.xml  scale_in.xml  scale_out.xml  slide_in_bottom.xml  slide_in_right.xml  slide_out_bottom.xml  slide_out_left.xml
app/src/main/res/color/: bottom_nav_color.xml  bottom_nav_selector.xml
app/src/main/res/drawable/: bg_focus_ring.xml  bg_gemini_ring_gradient.xml  bg_history_item_border.xml  bg_home_tree_rounded.xml  bg_tag_green.xml  bottom_nav_background.xml  capture_border_thin.xml  flag_england.xml  ic_arrow_right.xml  ic_back.xml  ic_camera.xml  ic_chat_bot.xml  ic_check_circle.xml  ic_check_warning_circle.xml  ic_favorite.xml  ic_gallery.xml  ic_home.xml  ic_image.xml  ic_instagram.xml  ic_language.xml  ic_lightning.xml  ic_lightning_auto.xml  ic_lightning_off.xml  ic_rotate.xml  ic_share.xml  ic_sort.xml  ic_zoomout.xml  progressbar_loading.xml  rounded_dark_bg.xml  rounded_history_dark_bg.xml  rounded_trans_bg.xml  top_history_corner.xml
app/src/main/res/layout/: activity_camera.xml  activity_camera_modern.xml  activity_language_selection.xml  activity_main.xml  activity_main_modern.xml  card_species_info.xml  card_species_info_modern.xml  fragment_about.xml  fragment_about_modern.xml  fragment_chat.xml  fragment_chat_history.xml  fragment_chat_modern.xml  fragment_history_detail.xml  fragment_history_detail_modern.xml  fragment_language_selection.xml  fragment_language_selection_modern.xml  item_chat_entry_modern.xml  item_chat_message.xml  item_chat_message_modern.xml  item_chat_session.xml  (+16 more)
gradle/wrapper/: gradle-wrapper.properties
src/: worker.js
(+106 files in other folders)
